<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">俏美钱包</string>

    <string name="tip_version"></string>

    <!-- 登录页面 -->
    <string name="welcome">欢迎登录</string>
    <string name="p_phone_no">请输入手机号码</string>
    <string name="p_password">请输入登录密码</string>
    <string name="tip_login_personal">登录</string>
    <string name="tip_forget">忘记密码?</string>
    <string name="tip_remember">记住密码</string>
    <string name="tip_qxremember">取消记住密码</string>
    <string name="tip_register_new">新用户注册</string>
    <string name="tip_switch">切换</string>


    <string name="main_home">首页</string>
    <string name="main_share">分享</string>
    <string name="main_trans">消息</string>
    <string name="main_mine">我的</string>

    <string name="home_kj">快捷支付</string>
    <string name="home_wx">微信支付</string>
    <string name="home_zfb">支付宝</string>
    <string name="home_JD">京东钱包</string>
    <string name="home_QQ">QQ钱包</string>
    <string name="home_YL">银联钱包</string>
    <string name="pay_type_wx">微信</string>
    <string name="home_kj_K0">K0</string>
    <string name="home_wx_Z0">Z0</string>
    <string name="home_zfb_AO">A0</string>
    <string name="home_qq">Q0</string>
    <string name="home_jd">J0</string>
    <string name="home_yl">Y0</string>
    <string name="home_baidu">B0</string>
    <string name="gn_money">分润余额</string>
    <string name="gn_updata">我要升级</string>
    <string name="gn_news">视频教学</string>
    <string name="gn_fr">分润明细</string>
    <string name="gn_trans">账单查询</string>
    <string name="gn_manger">会员管理</string>
    <string name="gn_qixing">掌上汽车</string>
    <string name="gn_xinyong">雨点信用</string>
    <string name="gn_yingxiao">营销工具</string>
    <string name="ylms">盈利模式</string>
    <string name="xyk_pufa">浦发银行</string>
    <string name="xyk_jiaotong">交通银行</string>
    <string name="xyk_pingan">平安银行</string>
    <string name="xyk_mingsheng">民生银行</string>
    <string name="xyk_xingye">兴业银行</string>
    <string name="xyk_guangzhou">广州银行</string>
    <string name="add_bankCard">银行卡添加</string>
    <string name="xyk_zhaoshang">招商银行</string>
    <string name="xyk_guangda">光大银行</string>
    <string name="xyk_shanghai">上海银行</string>
    <string name="yudian_guize">雨点规则</string>
    <string name="dk_pingan">平安普惠i贷</string>
    <string name="dk_pufa">浦发青春贷</string>
    <string name="dk_feidai">飞贷</string>
    <string name="paomadeng">万亿市场规模，手机在线收款，无卡支付实时到账，分享推荐裂变收益可观，人人创业，轻松月入过万不是梦！</string>

    <string name="tip_xyk">信用卡在线申请</string>
    <string name="tip_loan">贷款在线申请</string>
    <string name="title_fPsw">忘记密码</string>
    <string name="phone_no">手机号码</string>
    <string name="tip_write_psw">请输入密码</string>
    <string name="tip_reset_psw">重复密码</string>
    <string name="tip_write_two_psw">请再次输入密码</string>
    <string name="tip_verification_code">请输入验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="tip_service">如需帮助，请拨打客服热线：020-29839830</string>
    <string name="tip_protocol">同意《xxx服务协议》</string>
    <string name="tip_submit">确定</string>
    <string name="tip_submit_up">提交</string>
    <string name="tip_login_type">马上登录</string>
    <string name="tip_login_hou">已登录</string>
    <string name="tjr">推荐人</string>
    <string name="tip_my_approve">实名认证</string>
    <string name="tip_alter_psw">修改密码</string>
    <string name="tip_my_help">使用帮助</string>
    <string name="tip_my_service">客服对接</string>
    <string name="tip_my_service_tel">020-29839830</string>
    <string name="tip_my_about">关于我们</string>
    <string name="tip_my_chack">检查更新</string>
    <string name="tip_my_card">银行卡管理</string>
    <string name="tip_my_quit">安全退出</string>
    <string name="title_mine">我的</string>
    <string name="title_userInfo">填写真实信息</string>
    <string name="sk_name">收款人姓名</string>
    <string name="tip_sk_name">请输入收款人姓名</string>
    <string name="sk_id">收款人身份证</string>
    <string name="tip_write_sk_id">请输入收款人身份证</string>
    <string name="tip_sk_site">身份证地址</string>
    <string name="tip_write_sk_site">请输入详细地址</string>
    <string name="bank_number">银行卡号</string>
    <string name="tip_bank_number">请输入您的收款银行卡号</string>
    <string name="bank_type">所属银行</string>
    <string name="tip_bank_type">请选择所属银行</string>
    <string name="bank_site">开户地址</string>
    <string name="tip_write_bank_site">请选择开户所在省和市</string>
    <string name="tip_bank_type2">开户支行</string>
    <string name="tip_write_bank_type2">请输入关键字搜索支行</string>
    <string name="tip_photo">请务必拍摄清晰，能看清楚证件号码和证件有效期，在光线充足的环境下拍照效果更佳。</string>
    <string name="title_transdata">账单查询</string>
    <string name="transdata_ls">历史流水</string>
    <string name="transdata_mx">订单交易明细</string>
    <string name="tip_queryorder_search">订单查询</string>
    <string name="tip_queryorder_search_hint">请输入金额</string>
    <string name="tip_queryorder_condition">按条件查询</string>
    <string name="tip_queryorder_pay_type">支付方式</string>
    <string name="tip_queryorder_pay_status">支付状态</string>
    <string name="tip_queryorder_start_date">开始日期</string>
    <string name="tip_queryorder_end_date">结束日期</string>
    <string name="btn_queryorder_search">搜索</string>
    <string name="title_register">用户注册</string>

    <string name="pw_id_f">本人身份证反面</string>
    <string name="pw_id_z">本人身份证正面</string>
    <string name="pw_id_n">手持身份证照</string>
    <string name="pw_blank_z">结算银行卡正面</string>
    <string name="title_share">我要分享</string>
    <string name="title_new_pwd">修改密码</string>
    <string name="pwd">旧密码</string>
    <string name="tip_write_old_pwd">请输入旧密码</string>
    <string name="tip_new_pwd">新密码</string>
    <string name="tip_write_new_pwd">请输入新密码</string>
    <string name="tip_confirm_pwd">确认密码</string>
    <string name="tip_write_confirm_pwd">请再次输入密码</string>
    <string name="title_kj">快捷支付</string>
    <string name="tip_write_money">￥0.00</string>
    <string name="tip_kj">银联安全支付</string>
    <string name="tip_wx">微信安全支付</string>
    <string name="tip_zfb">支付宝安全支付</string>
    <string name="tip_sk_money">收款金额</string>
    <string name="title_bmikece">分润余额</string>
    <string name="tip_queryorder_search_profit">查询分润</string>
    <string name="tip_queryorder_trans_type">交易方式</string>
    <string name="tip_queryorder_profit_status">分润类型</string>
    <string name="title_upgrage">我要升级</string>
    <string name="title_profit_model">盈利模式</string>
    <string name="tip_merchant_search">商户查询</string>
    <string name="merchant_name">商户姓名</string>
    <string name="tip_merchant_name">请输入查询商户姓名</string>
    <string name="merchant_phone">商户手机</string>
    <string name="tip_merchant_phone">请输入查询手机号码</string>

    <string name="tip_queryorder_pay_status_s">支付成功</string>
    <string name="tip_queryorder_pay_status_c">支付中</string>
    <string name="title_txjl">提现记录</string>
    <string name="title_record">提现记录</string>
    <string name="options">选择方式</string>
    <string name="title_management">会员管理</string>
    <string name="download_percent_company">%</string>
    <string name="download_speed_company">kb/s</string>
    <string name="download_finish">下载已完成！</string>


    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_10">.</string>
    <string name="key_empty">C</string>
    <string name="key_backspace">←</string>
    <string name="submit">收款</string>
    <string name="CNY">￥</string>
    <string name="zroe">￥0.00</string>

    <string name="scan_wx_tip">微信扫一扫完成支付</string>
    <string name="scan_alipay_tip">支付宝扫一扫完成支付</string>
    <string name="service_tg">我要推广</string>
    <string name="profit_date">当日分润收益(元)</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="cancel">取消</string>
    <string name="album">相册</string>
    <string name="select_photo_hint">最多选择6张图片</string>
    <string name="finish">完成</string>
    <string name="dialog_hint">提示</string>
    <string name="confirm">确认</string>
    <string name="sk_phone">银行预留手机</string>
    <string name="tip_write_sk_phone">请输入银行预留手机号码</string>
    <string name="key">yingdingzhifu123</string>
    <string name="key2">ydzf123456</string>
</resources>
