<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_gray">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="100%">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/left_return"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="30%">

            <ImageView
                android:id="@+id/image_return"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/icon_return"
                app:layout_heightPercent="46%"
                app:layout_marginLeftPercent="5%"
                app:layout_marginTopPercent="26%"
                app:layout_widthPercent="28%"/>


        </android.support.percent.PercentRelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_kj"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"/>
    </android.support.percent.PercentRelativeLayout>
<android.support.percent.PercentRelativeLayout
    android:layout_below="@+id/layout_top"
    android:layout_width="match_parent"
    android:id="@+id/money_layout"
    android:background="@color/colorWhite"
    app:layout_heightPercent="25%"
    android:layout_height="wrap_content"
    >
    <TextView

        android:layout_width="match_parent"
        app:layout_marginTopPercent="2%"
        app:layout_heightPercent="30%"
        android:id="@+id/name"

        android:gravity="center"
        android:textSize="20sp"
        android:text="name"
        />
    <android.support.percent.PercentRelativeLayout
        android:layout_below="@+id/name"
        android:layout_width="match_parent"
        android:id="@+id/layout_money"
        app:layout_marginTopPercent="2%"
        app:layout_heightPercent="66%"
        >
        <TextView
            app:layout_widthPercent="30%"
            app:layout_marginTopPercent="2%"
            app:layout_marginLeftPercent="10%"
            android:text="@string/tip_sk_money"
            android:id="@+id/tip_money"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_heightPercent="50%"/>
        <TextView
            android:id="@+id/money"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:text="@string/zroe"
            android:singleLine="true"
            android:textSize="40sp"
            android:inputType="number"
            android:textColor="@color/colorBlack"
            app:layout_heightPercent="100%"
            app:layout_marginRightPercent="2%"
            android:textStyle="bold"
            app:layout_widthPercent="80%"/>
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/fen_gray"
            app:layout_heightPercent="1%"></View>
    </android.support.percent.PercentRelativeLayout>


</android.support.percent.PercentRelativeLayout>
<RelativeLayout
   android:layout_below="@+id/money_layout"
    android:layout_centerHorizontal="true"
    app:layout_marginTopPercent="7%"
    app:layout_marginBottomPercent="7%"
    android:layout_width="wrap_content"
    android:id="@+id/layout_body"
    app:layout_heightPercent="8%"
    >
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/icon_kj"
        android:padding="12dp"
        android:layout_centerVertical="true"
        android:id="@+id/type_zf"
        />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/tip_kj"
        android:id="@+id/type_tv"
        android:layout_toRightOf="@+id/type_zf"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/gray_tip"
        android:layout_height="match_parent" />
</RelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/layout_body"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_heightPercent="45%"
        >

        <android.support.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/key_layout_1"
            app:layout_heightPercent="25%"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/key_1"
                style="@style/key_btn"
                android:text="@string/key_1"
                />

            <Button
                android:id="@+id/key_2"
                style="@style/key_btn"
                android:text="@string/key_2"
                />

            <Button
                android:id="@+id/key_3"
                style="@style/key_btn"
                android:text="@string/key_3"
                />
            <Button
                android:id="@+id/key_11"
                style="@style/key_btn"
                android:text="@string/key_backspace"
                android:textSize="40sp"
                android:gravity="center"

                />

        </android.support.percent.PercentLinearLayout>

        <android.support.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/key_layout_1"
            android:id="@+id/key_layout_2"
            app:layout_heightPercent="25%"
            app:layout_widthPercent="75%"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/key_4"
                style="@style/key_btn"
                android:text="@string/key_4"
                />

            <Button
                android:id="@+id/key_5"
                style="@style/key_btn"
                android:text="@string/key_5"
                />

            <Button
                android:id="@+id/key_6"
                style="@style/key_btn"
                android:text="@string/key_6"
                />

        </android.support.percent.PercentLinearLayout>

        <android.support.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"
            android:layout_below="@+id/key_layout_2"
            android:id="@+id/key_layout_3"
            app:layout_widthPercent="75%"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/key_7"
                style="@style/key_btn"
                android:text="@string/key_7"
                />

            <Button
                android:id="@+id/key_8"
                style="@style/key_btn"
                android:text="@string/key_8"
                />

            <Button
                android:id="@+id/key_9"
                style="@style/key_btn"
                android:text="@string/key_9"
                />

        </android.support.percent.PercentLinearLayout>

        <android.support.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"
            app:layout_widthPercent="75%"
            android:layout_below="@+id/key_layout_3"
            android:id="@+id/key_layout_4"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/key_10"
                style="@style/key_btn"
                android:text="@string/key_empty"
                />

            <Button
                android:id="@+id/key_0"
                style="@style/key_btn"
                android:layout_weight="2"
                android:text="@string/key_0"
                />
            <Button
                android:id="@+id/key_12"
                style="@style/key_btn"
                 android:visibility="gone"
                android:text="@string/key_10"
                />

        </android.support.percent.PercentLinearLayout>
        <Button
            android:id="@+id/key_13"
            style="@style/key_btn"
            app:layout_heightPercent="75%"
            app:layout_widthPercent="25%"
            android:textColor="@color/colorWhite"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:text="@string/submit"
            />
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        app:layout_heightPercent="13%"
        android:layout_centerInParent="true"
        app:layout_widthPercent="65%"
        android:id="@+id/tip_ddsq"
        android:visibility="gone"
        android:background="@drawable/rectangle_black"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="订单申请中..."
            android:textSize="20sp"
            android:id="@+id/tv_tip"
            app:layout_marginLeftPercent="8%"
            android:textColor="@color/colorWhite"
            />
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/pBar"
          android:layout_toRightOf="@+id/tv_tip"
            app:layout_heightPercent="45%"
            app:layout_marginLeftPercent="1%"
            android:layout_centerVertical="true"
            app:layout_widthPercent="40%"
            />
    </android.support.percent.PercentRelativeLayout>
    </android.support.percent.PercentRelativeLayout>
