<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/action_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@id/tv_dialog_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        style="@style/line"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector_white"
            android:text="@string/cancel"
            android:textColor="@color/dialog_btn"
            android:textSize="17sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:background="@color/line" />

        <Button
            android:id="@id/btn_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector_white"
            android:text="@string/confirm"
            android:textColor="@color/dialog_btn"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>