<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle">
    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_queryorder_search_tip"
        android:layout_width="match_parent"
        app:layout_heightPercent="8%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginTopPercent="10%" >

        <ImageView
            android:id="@+id/tip_queryorder_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_heightPercent="70%"
            app:layout_marginTopPercent="15%"
            android:padding="1dp"
            android:src="@drawable/icon_item_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tip_queryorder_search"
            android:gravity="center_vertical"
            android:text="@string/tip_merchant_search"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_queryorder_search_tip"
        app:layout_heightPercent="20%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="5%"
        app:layout_marginTopPercent="5%">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/merchant_name"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="40%"/>

        <EditText
            android:id="@+id/write_phone_no"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/tip_merchant_name"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="12sp"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="60%"/>
    </android.support.percent.PercentRelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/layout_phone"
        android:layout_toRightOf="@id/image_phone"
        android:background="#666666"/>
    <!-- 设置密码 -->



    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_phone"
        android:layout_toRightOf="@id/image_setpsw"
        app:layout_heightPercent="20%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="5%"
        app:layout_marginTopPercent="5%">

        <EditText
            android:id="@+id/write_psw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/tip_merchant_phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textSize="12sp"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="60%"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/merchant_phone"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="40%"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView5" />
    </android.support.percent.PercentRelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/layout_psw"
        android:layout_toRightOf="@id/image_phone"
        android:background="#666666"/>
    <TextView
        android:id="@+id/start_search"
        android:layout_below="@id/layout_queryorder_end_date_tip"
        app:layout_heightPercent="10%"
        android:layout_alignParentBottom="true"
        app:layout_marginLeftPercent="35%"
        app:layout_marginBottomPercent="15%"
        app:layout_widthPercent="40%"
        android:background="@drawable/rectangle_blue"
        android:gravity="center"
        android:text="@string/btn_queryorder_search"
        android:textColor="@color/white"
        android:textSize="16sp" />
</android.support.percent.PercentRelativeLayout>