<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="12dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <TextView
            android:id="@+id/download_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/app_name"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/download_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="12sp"/>

        <ProgressBar
            android:id="@+id/download_progress"
            style="@style/progress_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_appname"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/download_percent_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/download_progress"
            android:layout_marginRight="20dp"
            android:text="@string/download_percent_company"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/download_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_progress"
            android:layout_toLeftOf="@id/download_percent_company"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/download_speed_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/download_progress"
            android:layout_marginRight="70dp"
            android:text="@string/download_speed_company"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/download_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_progress"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@id/download_speed_company"
            android:textSize="12sp"/>
    </RelativeLayout>

</LinearLayout>